# unity3d_nav_critterai

./: .gitignore
sources/src/main/Assets/CAI/GlobalAssets/: DebugDrawLine.shader
sources/src/main/Assets/CAI/nav-u3d/Editor/: NavmeshSceneDraw.cs
sources/src/main/Assets/CAI/nmbuild-u3d/Editor/input/: StaticFilter.cs
sources/src/main/Assets/CAI/util-u3d/: DebugDraw.cs
sources/src/nav-rcn/: CMakeLists.txt
sources/src/nav-rcn/Detour/: CMakeLists.txt
sources/src/nav-rcn/DetourCrowd/: CMakeLists.txt
sources/src/nav-rcn/Nav/Source/: DetourNavMeshBuildEx.cpp
sources/src/nav-rcn/macos/cai-nav-rcn/cai-nav-rcn/: Info.plist
sources/src/nav-rcn/macos/cai-nav-rcn/cai-nav-rcn.xcodeproj/: project.pbxproj
sources/src/nav-rcn/macos/cai-nav-rcn/cai-nav-rcn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sources/src/nmgen-rcn/: CMakeLists.txt
sources/src/nmgen-rcn/Recast/: CMakeLists.txt
sources/src/nmgen-rcn/macos/cai-nmgen-rcn/cai-nmgen-rcn.xcodeproj/: project.pbxproj
sources/src/nmgen-rcn/macos/cai-nmgen-rcn/cai-nmgen-rcn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
unity3d-5.x-64bit/Assets/CAI/GlobalAssets/: DebugDrawLine.mat
